# cookiecutter-ckanext

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.slug}}/: .cz.toml  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  mkdocs.yml  package.json  pyproject.toml  setup.py  test.ini
{{cookiecutter.slug}}/.github/: PULL_REQUEST_TEMPLATE.md  SUPPORT.md
{{cookiecutter.slug}}/.github/workflows/: bump.yml  main.yml  pypi-publish.yml  sync.yml  tests.yml
{{cookiecutter.slug}}/ckanext/: __init__.py
{{cookiecutter.slug}}/ckanext/{{ cookiecutter.short_name }}/: __init__.py  plugin.py
{{cookiecutter.slug}}/ckanext/{{ cookiecutter.short_name }}/lib/: helpers.py
{{cookiecutter.slug}}/ckanext/{{ cookiecutter.short_name }}/theme/: package.json
{{cookiecutter.slug}}/ckanext/{{ cookiecutter.short_name }}/theme/assets/: webassets.yml
{{cookiecutter.slug}}/docker/: Dockerfile
{{cookiecutter.slug}}/docs/: configuration.md  index.md  installation.md  requirements.txt  tests.md
{{cookiecutter.slug}}/docs/_scripts/: gen_api_pages.py
{{cookiecutter.slug}}/docs/usage/: index.md
