[project]
name = "{{ cookiecutter.slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.summary }}"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Natural History Museum", email = "data@nhm.ac.uk" }
]
keywords = ["CKAN", "data", "{{ cookiecutter.short_name }}"]
classifiers = [
    "Development Status :: {{ cookiecutter.dev_status }}",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]
dependencies = [
    {% if cookiecutter.contains_data_files -%}
    "importlib-resources",
    {% endif -%}
    {% if cookiecutter.reqs %}
    {% for r in cookiecutter.reqs.split(' ') -%}
    "{{ r }}",
    {% endfor -%}
    {% endif %}
    "ckantools>=0.3.0"
]

[project.optional-dependencies]
test = [
    "mock",
    "pytest>=4.6.5",
    "pytest-cov>=2.7.1",
    "coveralls"
]

[project.urls]
repository = "https://github.com/NaturalHistoryMuseum/{{ cookiecutter.slug }}"
changelog = "https://github.com/NaturalHistoryMuseum/{{ cookiecutter.slug }}/blob/main/CHANGELOG.md"

[project.entry-points."ckan.plugins"]
{{ cookiecutter.short_name }} = "ckanext.{{ cookiecutter.short_name }}.plugin:{{ cookiecutter.class }}Plugin"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool]
[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
exclude = ["tests", "docs"]

[tool.setuptools.package-data]
{% if cookiecutter.contains_data_files -%}
"ckanext.{{ cookiecutter.short_name }}.data" = ["*", "**/*"]
{% endif -%}
"ckanext.{{ cookiecutter.short_name }}.theme" = ["*", "**/*"]

[tool.commitizen]
name = "cz_nhm"
version = "{{ cookiecutter.version }}"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_incremental = false
version_files = [
    {% if cookiecutter.contains_js_apps -%}
    "ckanext/{{ cookiecutter.short_name }}/theme/package.json",
    {% endif -%}
    "pyproject.toml:version"
]

[tool.black]
line-length = 88
skip_string_normalization = true

[tool.pylint]
max-line-length = 88
disable = ["C0114", "R0903"]

[tool.docformatter]
wrap-summaries = 88
wrap-descriptions = 88
pre-summary-newline = true
make-summary-multi-line = true
